compiling_error.txt
/home/grad/Documentos/PROGRAMACAO/C/CONTROLE_PORTA_PARALELA/main.c: In function ‘atraso’:
/home/grad/Documentos/PROGRAMACAO/C/CONTROLE_PORTA_PARALELA/main.c:9:55: error: expected declaration specifiers before ‘:’ token
 void atraso(int quantPassos, int passos[], int atraso): //prototipo da funcao atraso
                                                       ^
/home/grad/Documentos/PROGRAMACAO/C/CONTROLE_PORTA_PARALELA/main.c:32:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 void bemVindo(){
                ^
/home/grad/Documentos/PROGRAMACAO/C/CONTROLE_PORTA_PARALELA/main.c:43:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 void ajuda(){
             ^
/home/grad/Documentos/PROGRAMACAO/C/CONTROLE_PORTA_PARALELA/main.c:54:23: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 void recebeVariaveis(){
                       ^
/home/grad/Documentos/PROGRAMACAO/C/CONTROLE_PORTA_PARALELA/main.c:73:58: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 void sequencia(int quantPassos, int passos[], int atraso){
                                                          ^
/home/grad/Documentos/PROGRAMACAO/C/CONTROLE_PORTA_PARALELA/main.c:81:24: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 void atraso(int atraso){
                        ^
/home/grad/Documentos/PROGRAMACAO/C/CONTROLE_PORTA_PARALELA/main.c:89:1: error: expected ‘{’ at end of input
 }
 ^
